# ryft

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  release.toml  rustfmt.toml
crates/experimental/: Cargo.toml  README.md
crates/experimental/src/: lib.rs  specialization.rs  transfer_guard.rs
crates/experimental/src/jax/: ffi.rs  gpu_runtime.rs  mod.rs
crates/ryft/: CHANGELOG.md  Cargo.toml
crates/ryft-core/: CHANGELOG.md  Cargo.toml  README.md
crates/ryft-core/src/: broadcasting.rs  differentiation.rs  errors.rs  jit.rs  lib.rs  parameters.rs  programs.rs  sharding.rs  tracing.rs  tracing_v0.rs  types.rs
crates/ryft-core/src/differentiation_v0/: mod.rs  type.rs
crates/ryft-core/src/ops/: arithmetic.rs  comparison.rs  constants.rs  mod.rs  trigonometric.rs
crates/ryft-core/src/sharding/: mod.rs  visualization.rs  visualizations.rs
crates/ryft-core/src/tracing_v2/: batch.rs  benchmark_support.rs  benchmarking.rs  context.rs  engine.rs  forward.rs  graph.rs  jit.rs  linear.rs  matmul.rs  mod.rs  ops.rs  program.rs  programs.rs  test_support.rs  value.rs  values.rs
crates/ryft-core/src/tracing_v2/linear/: dense.rs  mod.rs  program.rs  rematerialization.rs  replay.rs  reverse.rs  term.rs
crates/ryft-core/src/tracing_v2/operations/: add.rs  cos.rs  custom.rs  left_matmul.rs  linear_matrix_transpose.rs  matmul.rs  matrix.rs  matrix_transpose.rs  mod.rs  mul.rs  neg.rs  primitive.rs  rematerialize.rs  reshape.rs  right_matmul.rs  scale.rs  shard_map.rs  sin.rs  vmap.rs  with_sharding_constraint.rs
crates/ryft-core/src/types/: array_structure_type.rs  array_type.rs  array_types.rs  data_type.rs  data_types.rs  layouts.rs  mod.rs  sharding.rs  type.rs
crates/ryft-core/src/types_v0/: array_structure_type.rs  array_type.rs  broadcastable.rs  mod.rs  type.rs
crates/ryft-core/src/utilities/: colors.rs
crates/ryft-core/src/xla/: arrays.rs  benchmark_support.rs  lowering.rs  mod.rs  shard_map.rs  sharding.rs
crates/ryft-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/ryft-macros-tests/: Cargo.toml
crates/ryft-macros-tests/tests/: test_parameters.rs
crates/ryft-macros-tests/tests/parameters/: error_attributes.rs  error_attributes.stderr  error_bounds.rs  error_bounds.stderr  error_enums.rs  error_enums.stderr  error_no_parameters.rs  error_no_parameters.stderr  error_references.rs  error_references.stderr  error_self.rs  error_self.stderr  error_structs.rs  error_structs.stderr  error_tuples.rs  error_tuples.stderr  error_unions.rs  error_unions.stderr
crates/ryft-macros/src/: lib.rs  parameters.rs
crates/ryft-macros/src/helpers/: attribute.rs  attributes.rs  generics.rs  hygiene.rs  ident.rs  idents.rs  mod.rs  path.rs  paths.rs  receiver.rs  receivers.rs  span.rs  spans.rs  symbol.rs  symbols.rs
crates/ryft-mlir/: CHANGELOG.md  Cargo.toml  README.md
crates/ryft-mlir/src/: attributes.rs  blocks.rs  context.rs  diagnostics.rs  execution_engine.rs  identifier.rs  lib.rs  locations.rs  macros.rs  modules.rs  regions.rs  support.rs  types.rs  values.rs
crates/ryft-mlir/src/dialects/: dialect.rs  handle.rs  mod.rs  registry.rs
crates/ryft-mlir/src/dialects/affine/: affine_expressions.rs  affine_maps.rs  integer_sets.rs  mod.rs
crates/ryft-mlir/src/dialects/arith/: mod.rs  operations.rs
crates/ryft-mlir/src/dialects/async/: mod.rs  passes.rs
crates/ryft-mlir/src/dialects/builtin/: mod.rs  operations.rs  passes.rs
crates/ryft-mlir/src/dialects/cf/: mod.rs  operations.rs
crates/ryft-mlir/src/dialects/chlo/: mod.rs
crates/ryft-mlir/src/dialects/func/: mod.rs  operations.rs
crates/ryft-mlir/src/dialects/gpu/: attributes.rs  mod.rs  operations.rs  passes.rs  types.rs
crates/ryft-mlir/src/dialects/index/: mod.rs  operations.rs
crates/ryft-mlir/src/dialects/linalg/: mod.rs  passes.rs
crates/ryft-mlir/src/dialects/llvm/: mod.rs
crates/ryft-mlir/src/dialects/memref/: mod.rs
crates/ryft-mlir/src/dialects/mhlo/: mod.rs  passes.rs
crates/ryft-mlir/src/dialects/pdl/: mod.rs
crates/ryft-mlir/src/dialects/quant/: mod.rs  operations.rs  types.rs
crates/ryft-mlir/src/dialects/scf/: mod.rs
crates/ryft-mlir/src/dialects/shape/: mod.rs
crates/ryft-mlir/src/dialects/shardy/: attributes.rs  mod.rs  operations.rs  passes.rs
crates/ryft-mlir/src/dialects/sparse_tensor/: mod.rs  passes.rs
crates/ryft-mlir/src/dialects/stable_hlo/: attributes.rs  mod.rs  passes.rs  types.rs
crates/ryft-mlir/src/dialects/tensor/: mod.rs
crates/ryft-mlir/src/dialects/triton/: attributes.rs  mod.rs  operations.rs  types.rs
crates/ryft-mlir/src/dialects/versioned_hlo/: mod.rs
crates/ryft-mlir/src/operations/: builder.rs  mod.rs  operation.rs  printing.rs  symbol_table.rs  traits.rs
crates/ryft-mlir/src/passes/: mod.rs  pass.rs  pass_manager.rs
crates/ryft-pjrt/: CHANGELOG.md  Cargo.toml  README.md
crates/ryft-pjrt/src/: buffers.rs  clients.rs  devices.rs  distributed.rs  errors.rs  events.rs  lib.rs  macros.rs  memories.rs  plugins.rs  programs.rs  protos.rs  topologies.rs  transfers.rs  values.rs  versions.rs
crates/ryft-pjrt/src/extensions/: abi_version.rs  cross_host_transfers.rs  executable_metadata.rs  gpu_custom_call.rs  host_allocator.rs  host_memory_allocator.rs  layouts.rs  memory_descriptions.rs  mod.rs  profiler.rs  shardings.rs  stream.rs  triton.rs
crates/ryft-pjrt/src/extensions/ffi/: attributes.rs  buffers.rs  context.rs  errors.rs  futures.rs  handlers.rs  mod.rs  (+2 more)
crates/ryft-xla/: CHANGELOG.md  Cargo.toml  README.md
crates/ryft-xla-sys/: .bazelrc  BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md  WORKSPACE  build.rs
crates/ryft-xla-sys/bazel/: archive.bzl
crates/ryft-xla-sys/patches/: recv_callback_fix.patch
crates/ryft-xla-sys/src/: bindings.rs  distributed.rs  lib.rs  protos.rs
crates/ryft-xla/src/: lib.rs  mlir.rs  pjrt.rs  sharding.rs  types.rs
crates/ryft-xla/src/experimental/: arrays.rs  benchmark_support.rs  engine.rs  lowering.rs  mod.rs  ops.rs  shard_map.rs
crates/ryft/examples/: readme_low_level_stablehlo_matmul.rs  visualize_colored_sharding.rs
crates/ryft/src/: lib.rs
(+63 files in other folders)
