[workspace]
resolver = "3"

members = [
    "crates/ryft-pjrt",
    "crates/ryft-xla-sys",
]

[workspace.package]
authors = ["Emmanouil Antonios Platanios <e.a.platanios@gmail.com>"]
edition = "2024"
repository = "https://github.com/eaplatanios/ryft"

[workspace.dependencies]
anyhow = "1.0.100"
bindgen = "0.72.1"
dirs = "6.0.0"
flate2 = "1.1.8"
futures = "0.3.31"
half = "2.7.1"
hex = "0.4.3"
indoc = "2.0.7"
libloading = "0.9.0"
paste = "1.0.15"
pretty_assertions = "1.4.1"
prost = "0.14.3"
prost-build = "0.14.3"
prost-types = "0.14.3"
reqwest = { version = "0.13.1", features = ["blocking"] }
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.24.0"
thiserror = "2.0.18"
walkdir = "2.5.0"
zip = "7.2.0"
