[workspace]
resolver = "3"
members = [
    "crates/ryft",
    "crates/ryft-core",
    "crates/ryft-macros",
    "crates/ryft-mlir",
    "crates/ryft-pjrt",
    "crates/ryft-xla-sys",
]

[workspace.package]
authors = ["Emmanouil Antonios Platanios <e.a.platanios@gmail.com>"]
edition = "2024"
repository = "https://github.com/eaplatanios/ryft"
documentation = "https://docs.rs/ryft"
keywords = ["ryft", "tracing", "autodiff", "compiler", "machine-learning"]
categories = ["compilers", "hardware-support", "mathematics", "science"]
license = "MIT OR Apache-2.0"
include = [
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "NOTICE",
]

[workspace.dependencies]
ryft-core = { path = "crates/ryft-core", version = "0.0.1", default-features = false }
ryft-macros = { path = "crates/ryft-macros", version = "0.0.1", default-features = false }
ryft-mlir = { path = "crates/ryft-mlir", version = "0.0.1", default-features = false }
ryft-pjrt = { path = "crates/ryft-pjrt", version = "0.0.1", default-features = false }
ryft-xla-sys = { path = "crates/ryft-xla-sys", version = "0.0.1", default-features = false }
anyhow = "1.0.102"
bindgen = "0.72.1"
dirs = "6.0.0"
dyn-clone = "1.0.20"
flate2 = "1.1.9"
futures = "0.3.32"
half = "2.7.1"
hex = "0.4.3"
indoc = "2.0.7"
libloading = "0.9.0"
paste = "1.0.15"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.106"
prost = "0.14.3"
prost-build = "0.14.3"
prost-types = "0.14.3"
quote = "1.0.44"
reqwest = { version = "0.13.2", features = ["blocking"] }
sha2 = "0.10.9"
# During development/debugging of our macros it may be useful to add the `extra-traits` feature to aid with debugging.
# However, it should generally be disabled for releases in order to speed up compile times. Currently though, we have
# to keep it enabled because our macro library relies on the implementation of [PartialEq] for [syn::Path]s.
# Reference: https://github.com/dtolnay/proc-macro-workshop#debugging-tips
syn = { version = "2.0.117", features = [
    "full",
    "visit",
    "visit-mut",
    "extra-traits",
] }
tar = "0.4.44"
tempfile = "3.25.0"
thiserror = "2.0.18"
trybuild = "1.0.116"
walkdir = "2.5.0"
zip = "8.1.0"
