[package]
name = "ryft-core"
version = "0.0.3"
readme = "README.md"
description = "Core abstractions of the Ryft library."
keywords = ["ryft", "tracing", "autodiff", "compiler", "machine-learning"]
include = [
    "src/**/*",
    "Cargo.toml",
    "CHANGELOG.md",
    "README.md",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "../../NOTICE",
]

authors.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[package.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
    { file = "CHANGELOG.md", search = "Release Date", replace = "{{date}}", min = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n## [Unreleased] - Release Date\n", exactly = 1 },
]

[dependencies]
ryft-macros.workspace = true
aquamarine.workspace = true
convert_case.workspace = true
dyn-clone.workspace = true
half.workspace = true
ndarray = { workspace = true, optional = true }
paste.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
indoc.workspace = true
ndarray.workspace = true
pretty_assertions.workspace = true

[features]
default = []
benchmarking = []
ndarray = ["dep:ndarray"]
