[package]
name = "ryft-mlir"
version = "0.0.1"
readme = "README.md"
description = "Ryft bindings for MLIR."
keywords = ["ryft", "mlir", "xla", "hlo", "triton"]
include = [
    "src/**/*",
    "Cargo.toml",
    "CHANGELOG.md",
    "README.md",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "../../NOTICE",
]

authors.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[package.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
    { file = "CHANGELOG.md", search = "Release Date", replace = "{{date}}", min = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n## [Unreleased] - Release Date\n", exactly = 1 },
]

[dependencies]
ryft-xla-sys.workspace = true
half.workspace = true
paste.workspace = true
thiserror.workspace = true

[dev-dependencies]
indoc.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
