[package]
name = "ryft-pjrt"
version = "0.0.1"
readme = "README.md"
description = "Ryft bindings for PJRT."
keywords = ["ryft", "xla", "pjrt", "gpu", "tpu"]
include = [
    "src/**/*",
    "Cargo.toml",
    "CHANGELOG.md",
    "README.md",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "../../NOTICE",
]

authors.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[package.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
    { file = "CHANGELOG.md", search = "Release Date", replace = "{{date}}", min = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n## [Unreleased] - Release Date\n", exactly = 1 },
]

[features]
default = []
cuda-12 = ["ryft-xla-sys/cuda-12"]
cuda-13 = ["ryft-xla-sys/cuda-13"]
rocm-7 = ["ryft-xla-sys/rocm-7"]
tpu = ["ryft-xla-sys/tpu"]
neuron = ["ryft-xla-sys/neuron"]
metal = ["ryft-xla-sys/metal"]

[dependencies]
ryft-xla-sys.workspace = true
half.workspace = true
hex.workspace = true
libloading.workspace = true
paste.workspace = true
prost.workspace = true
thiserror.workspace = true

[dev-dependencies]
futures.workspace = true
indoc.workspace = true
